Moved Dockerfile to demo folder and updated paths

--- a/demo/src/test/java/com/example/Dockerfile
+++ b/demo/src/test/java/com/example/Dockerfile
@@ -1,10 +1,16 @@
-# Build stage
-FROM maven:3-eclipse-temurin-21 AS build
+# Gamit tayo ng stable na Maven/Java version
+FROM maven:3.9.6-eclipse-temurin-21 AS build
+WORKDIR /app
+
+# Dahil nasa loob na tayo ng 'demo' folder, i-copy lahat ng laman nito
 COPY . .
+
+# I-build ang jar file
 RUN mvn clean package -DskipTests
 
 # Run stage
 FROM eclipse-temurin-21-jre
-COPY --from=build /target/*.jar app.jar
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 9091
 ENTRYPOINT ["java", "-jar", "app.jar", "--server.port=9091"]
