--- a/demo/src/test/java/com/example/Dockerfile
+++ b/demo/src/test/java/com/example/Dockerfile
@@ -1,15 +1,13 @@
 FROM maven:3.9.6-eclipse-temurin-21 AS build
 WORKDIR /app
-
-# I-copy ang buong folder contents
+# I-copy lahat (kasama ang demo folder)
 COPY . .
-
-# Dahil ang Root ay nasa labas na, kailangan nating pumasok sa 'demo' folder para mag-build
+# Pumasok sa demo folder para mag-build
 RUN cd demo && mvn clean package -DskipTests
 
 FROM eclipse-temurin-21-jre
 WORKDIR /app
-# Kunin ang jar mula sa demo/target
+# Hanapin ang jar sa loob ng demo/target
 COPY --from=build /app/demo/target/*.jar app.jar
 EXPOSE 9091
 ENTRYPOINT ["java", "-jar", "app.jar", "--server.port=9091"]
