--- a/demo/src/test/java/com/example/Dockerfile
+++ b/demo/src/test/java/com/example/Dockerfile
@@ -1,10 +1,16 @@
 FROM maven:3.9.6-eclipse-temurin-21 AS build
 WORKDIR /app
+
 COPY . .
-RUN cd demo && mvn clean package -DskipTests
+
+RUN mvn clean package -DskipTests -f demo/pom.xml
 
 FROM eclipse-temurin-21-jre
 WORKDIR /app
+
+
 COPY --from=build /app/demo/target/*.jar app.jar
+
+EXPOSE 8080
 
 ENTRYPOINT ["java", "-jar", "app.jar", "--server.port=${PORT}"]
