Fix: Move Dockerfile to root and use alpine images

--- a/demo/src/test/java/com/example/Dockerfile
+++ b/demo/src/test/java/com/example/Dockerfile
@@ -1,18 +1,18 @@
 # Stage 1: Build phase
-FROM maven:3.9.6-eclipse-temurin-21 AS build
+# Gumamit ng alpine version para mas mabilis i-download
+FROM maven:3.9.6-eclipse-temurin-21-alpine AS build
 WORKDIR /app
 COPY . .
-# Ginagamit ang -f demo/pom.xml dahil nasa root ang Dockerfile base sa settings mo
+# Siguraduhing tama ang folder name na 'demo' sa path mo
 RUN mvn clean package -DskipTests -f demo/pom.xml
 
 # Stage 2: Run phase
-# DITO ANG FIX: Dapat ay may ':' sa pagitan ng image name at version
-FROM eclipse-temurin:21-jre
+FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
-# Siguraduhing kinokopya ang jar mula sa tamang target folder
+# Kunin ang JAR mula sa build stage
 COPY --from=build /app/demo/target/*.jar app.jar
 
 EXPOSE 8080
 
-# Ang PORT ay variable na galing mismo sa Railway
+# PORT is provided by Railway automatically
 ENTRYPOINT ["java", "-jar", "app.jar", "--server.port=${PORT}"]
